[gd_scene load_steps=15 format=3 uid="uid://beifde6xst23w"]

[ext_resource type="Script" uid="uid://dpa82ostefa32" path="res://scripts/weapons/projectile/projectile.gd" id="1_mp3hp"]
[ext_resource type="Resource" uid="uid://dedx0gi4fowby" path="res://resources/global_resources/axis_multiplication_resource.tres" id="2_eeh78"]
[ext_resource type="Script" uid="uid://dj1n3llg8eer0" path="res://scripts/weapons/projectile/projectile_setup.gd" id="3_8cenh"]
[ext_resource type="Script" uid="uid://xqvgdt8ts4c2" path="res://scripts/weapons/projectile/projectile_mover.gd" id="4_ctcxy"]
[ext_resource type="Script" uid="uid://bm4xeidhauixf" path="res://addons/great_games_library/nodes/AreaTransmitter/AreaTransmitter2D.gd" id="5_75wl1"]
[ext_resource type="Script" uid="uid://b0uw7wkj5ulcm" path="res://addons/great_games_library/nodes/AreaTransmitter/DataChannelTransmitter.gd" id="6_6u51s"]
[ext_resource type="Texture2D" uid="uid://dfvekqbad4tnk" path="res://assets/images/projectile/bullet_0.png" id="7_b5ems"]
[ext_resource type="Script" uid="uid://c0rlarvn6k2xk" path="res://scripts/weapons/projectile/projectile_rotation.gd" id="8_p6iq5"]
[ext_resource type="Script" uid="uid://dmxb4fk0c8r25" path="res://scripts/weapons/projectile/projectile_impact.gd" id="9_ryu04"]
[ext_resource type="Resource" uid="uid://s3oxaww7qjgi" path="res://resources/instance_resources/vfx/impact_instance_resource.tres" id="10_51lkr"]
[ext_resource type="Script" uid="uid://cnuohxqf70gpv" path="res://scripts/weapons/projectile/hit_limit.gd" id="11_wxo80"]
[ext_resource type="Script" uid="uid://us7f4xcg15qt" path="res://scripts/weapons/projectile/projectile_lifetime.gd" id="12_benel"]
[ext_resource type="Script" uid="uid://c505hy2cj5vwa" path="res://addons/great_games_library/resources/InstanceResource/PoolNode.gd" id="13_xfm4s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4a7g"]
size = Vector2(4, 2)

[node name="Projectile" type="Node2D" node_paths=PackedStringArray("pool_node")]
script = ExtResource("1_mp3hp")
speed = 120.0
axis_multiplier_resource = ExtResource("2_eeh78")
pool_node = NodePath("PoolNode")

[node name="ProjectileSetup" type="Node" parent="." node_paths=PackedStringArray("projectile", "area_transmitter", "data_channel_transmitter")]
script = ExtResource("3_8cenh")
projectile = NodePath("..")
area_transmitter = NodePath("../AreaTransmitter2D")
data_channel_transmitter = NodePath("../AreaTransmitter2D/DamageDataTransmitter")

[node name="ProjectileMover" type="Node" parent="." node_paths=PackedStringArray("projectile")]
script = ExtResource("4_ctcxy")
projectile = NodePath("..")
collision_mask = 1

[node name="AreaTransmitter2D" type="Area2D" parent="."]
script = ExtResource("5_75wl1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTransmitter2D"]
shape = SubResource("RectangleShape2D_g4a7g")

[node name="DamageDataTransmitter" type="Node" parent="AreaTransmitter2D"]
script = ExtResource("6_6u51s")

[node name="RotatedNode" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="Sprite2D" type="Sprite2D" parent="RotatedNode"]
scale = Vector2(2, 2)
texture = ExtResource("7_b5ems")

[node name="ProjectileRotation" type="Node" parent="." node_paths=PackedStringArray("rotated_node", "projectile", "mover")]
script = ExtResource("8_p6iq5")
rotated_node = NodePath("../RotatedNode")
projectile = NodePath("..")
mover = NodePath("../ProjectileMover")

[node name="ProjectileImpact" type="Node" parent="." node_paths=PackedStringArray("projectile", "projectile_mover", "data_transmitter")]
script = ExtResource("9_ryu04")
projectile = NodePath("..")
projectile_mover = NodePath("../ProjectileMover")
data_transmitter = NodePath("../AreaTransmitter2D/DamageDataTransmitter")
impact_instance_resource = ExtResource("10_51lkr")

[node name="HitLimit" type="Node" parent="." node_paths=PackedStringArray("projectile", "data_transmitter")]
script = ExtResource("11_wxo80")
projectile = NodePath("..")
data_transmitter = NodePath("../AreaTransmitter2D/DamageDataTransmitter")

[node name="ProjectileLifetime" type="Node" parent="." node_paths=PackedStringArray("projectile")]
script = ExtResource("12_benel")
time = 2.0
projectile = NodePath("..")

[node name="PoolNode" type="Node" parent="." node_paths=PackedStringArray("ready_nodes")]
script = ExtResource("13_xfm4s")
ready_nodes = [NodePath(".."), NodePath("../ProjectileSetup"), NodePath("../ProjectileLifetime"), NodePath("../HitLimit"), NodePath("../ProjectileRotation"), NodePath("../ProjectileMover")]
